# pnpm-react-fastapi

./: README.md  main.py  pyproject.toml
api/: pyproject.toml
application/: pyproject.toml
application/use_cases/: main.py
core/: README.md  pyproject.toml
core/domain/: main.py
core/inbound_ports/: main.py
core/outbound_ports/: main.py
database/: README.md
frontend/: pnpm-lock.yaml
frontend/src/components/: DeleteFruitForm.jsx  Fruits.jsx  UpdateFruitForm.jsx
infra/: pyproject.toml
infra/inbound_adapters/api/: main.py
infra/outbound_adapters/database/: main.py  pyproject.toml
services/: README.md  main.py
