[project]
name = "infra"
version = "0.1.0"
description = "Infrastructure layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
    "services",
    "fastapi>=0.128.8",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
core = { workspace = true }
services = { workspace = true }
